updated env.demo file

--- a/Backend/image-service/.env.demo
+++ b/Backend/image-service/.env.demo
@@ -1,2 +1,7 @@
 DATABASE_URI=postgresql://username:password@localhost/dbname
 ENV_MODE=development            # development | production
+HUGGING_FACE_API_KEY=hf_
+GEMINI_API_KEY=
+GEMINI_MODEL_NAME=gemini-1.5-flash
+CELERY_BROKER_URL=redis://localhost:6379/0
+CELERY_RESULT_BACKEND=redis://localhost:6379/0
