--- a/Backend/wallet-service/.env.demo
+++ b/Backend/wallet-service/.env.demo
@@ -1,1 +1,7 @@
+# Hardhat private key
 PRIVATE_KEY=
+
+POSTGRES_URL=postgresql://username:password@localhost/dbname
+
+# JWT key for signatures
+JWT_KEY=
