--- a/PokeChain/package.json
+++ b/PokeChain/package.json
@@ -6,7 +6,7 @@
     "@heroicons/react": "^2.2.0",
     "@openzeppelin/contracts": "^5.1.0",
     "@types/uuid": "^10.0.0",
-    "@web3-react/core": "^8.2.3",
+    "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "cra-template": "1.2.0",
     "dotenv": "^16.4.7",
@@ -16,7 +16,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^7.0.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.2",
     "react-unity-webgl": "^9.7.0",
     "uuid": "^11.0.3",
